chore: add font and colors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1 class="text-3xl font-bold underline text-red-800">
+<h1 class="text-3xl font-bold underline text-epc-r1">
   Hello world!
 </h1>
+<p class="bg-epc-d0 text-epc-w2">
+  Nostalgic
+</p>
