chore: configure sanity admin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<h1 class="text-3xl font-bold underline text-epc-r1">
-  Hello world!
-</h1>
-<p class="bg-epc-d0 text-epc-w2">
-  Nostalgic
-</p>
+<div class="flex flex-col justify-between h-full min-h-screen bg-epc-o0">
+
+  <app-navbar />
+  <main class="mb-auto">
+    <router-outlet class="hidden" />
+  </main>
+  <app-footer />
+
+</div>
