--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<section class="bg-epc-r0 min-h-96">
+  <div class="container mx-auto">
+    <h1>Home component</h1>
+  </div>
+</section>
