--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,5 +1,12 @@
 <section class="bg-epc-r0 min-h-96">
   <div class="container mx-auto">
     <h1>Home component</h1>
+
   </div>
 </section>
+
+<!-- @for (item of faqs; track item._id) {
+  <li>{{ item.title }}</li>
+  } @empty {
+  <li>There are no items.</li>
+  } -->
