--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,12 +1,11 @@
-<section class="bg-epc-r0 min-h-96">
+<section class="py-32 min-h-96 bg-epc-w0">
   <div class="container mx-auto">
-    <h1>Home component</h1>
-
+    <app-slider [sliderData]="sliderData" />
   </div>
 </section>
 
-@for (item of services; track item._id) {
+<!-- @for (item of services; track item._id) {
 <li>{{ item.parentService }}</li>
 } @empty {
 <li>There are no items.</li>
-}
+} -->
