--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,8 @@ body {
   font-family: 'Sora', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
   margin: 0;
 }
+
+button {
+  background-color: unset;
+  border: unset;
+}
