--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,3 +1,3 @@
 i {
-  @apply p-2 text-xl rounded-lg bg-epc-w0 hover:bg-epc-r1 hover:text-epc-w0
+  @apply p-2 text-xl rounded-md bg-epc-w0 hover:bg-epc-r1 hover:text-epc-w0
 }
