--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,31 @@ button {
   background-color: unset;
   border: unset;
 }
+
+h1 {
+  font-size: 3.5rem;
+  line-height: 1.2;
+  font-weight: 800;
+}
+
+h2 {
+  font-size: 2rem;
+  line-height: 1.4;
+  font-weight: 800;
+}
+
+h3 {
+  font-size: 1.2rem;
+  line-height: 1.6;
+  font-weight: 700;
+}
+
+h6 {
+  font-size: 0.875rem;
+  line-height: 2;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 2;
+}
