chore: work on footer

--- a/src/app/modules/home/components/marcas/marcas.component.html
+++ b/src/app/modules/home/components/marcas/marcas.component.html
@@ -1,7 +1,8 @@
-<p>marcas works!</p>
-
-<div class="container mx-auto">
-  @for (brand of brands; track brand._id){
-    <img [src]="imageUrl(brand.image.asset._ref)" alt="" class="w-6 h-4">
-  }
-</div>
+<section class="container pb-12 mx-auto">
+  <h3 class="pb-12 text-center text-epc-r1"><span class="text-epc-o1">* </span>Marcas amigas del Paisa Cargo</h3>
+  <div class="flex gap-12 items-start justify-center *:h-auto *:max-w-40 *:max-h-14">
+    @for (brand of brands; track brand._id){
+    <img [src]="imageUrl(brand.image.asset._ref)" alt="brand logo" class="my-auto">
+    }
+  </div>
+</section>
