chore: final touches

--- a/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
+++ b/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
@@ -14,7 +14,7 @@
       <div class="card group">
         <h3>{{service.parentService}}</h3>
         <!-- <p>{{service.subservices}}</p> -->
-        <p class="text-xs">This is the container for parent service</p>
+        <p class="text-xs">{{service.description}}</p>
         <div class="icon">
           <i class="iconoir-{{service.icon}}"></i>
         </div>
