--- a/src/app/modules/home/components/slider/slider.component.html
+++ b/src/app/modules/home/components/slider/slider.component.html
@@ -5,7 +5,7 @@
     <h1>{{sliderData[1].title}}</h1>
     <p class="max-w-96">{{sliderData[1].description}}</p>
     <button class="flex items-center gap-2 px-8 py-4 mr-auto rounded-lg bg-epc-w0">
-      <i class="iconoir-arrow-up-right"></i>
+      <i class="iconoir-phone"></i>
       Contactanos
     </button>
   </div>
