--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-between h-full min-h-screen bg-epc-o0">
+<div class="flex flex-col justify-between h-full min-h-screen bg-slate-100">
 
   <app-navbar />
   <main class="mb-auto">
