--- a/src/app/modules/home/components/faq/faq.component.html
+++ b/src/app/modules/home/components/faq/faq.component.html
@@ -1,21 +1,35 @@
-<section class="container py-32 mx-auto">
-  <div class="grid grid-cols-2 gap-2 p-8 rounded-lg bg-epc-w0 min-h-[30rem]">
+<section class="container py-24 mx-auto">
+  <div class="grid grid-cols-2 gap-2 px-8 py-16 rounded-lg bg-epc-w0 min-h-[30rem] group drop-shadow-sm">
+
     @if (faqs.length > 0) {
-      <div class="flex flex-col justify-center">
-        <div class="flex flex-col pl-4 border-l-8 rounded-b-lg rounded-tl-lg border-epc-r1">
-          <h6 class="text-epc-r1">Parent Service {{currentFaq()}}</h6>
-          <h2>{{faqs[currentFaq()].question}}</h2>
+      <div class="flex flex-col justify-end flex-1">
+        <!-- SERVICIOS -->
+        <div class="flex justify-center flex-1">
+          <div class="flex flex-col justify-center pl-4 my-auto border-l-8 rounded-b-lg rounded-tl-lg border-epc-r1">
+            <h6 class="pb-1 text-slate-300">- {{currentService}}</h6>
+            <h2>{{faqs[currentFaq()].question}}</h2>
+            <h6 class="pt-4">{{faqs[currentFaq()].answer}}</h6>
+          </div>
         </div>
-        <h6 class="pt-4">{{faqs[currentFaq()].answer}}</h6>
-        <span>
-          <button (click)="nextFaq()">Next</button>
-          <button (click)="prevFaq()">Prev</button>
-        </span>
+
+        <!-- ACTIONS -->
+        <div class="flex items-center gap-8 pt-8">
+          <h3 class="w-24 p-2 text-center rounded-md text-epc-r2">{{currentFaq() + 1}} <span class="text-epc-r0">/ {{faqs.length}}</span></h3>
+          <div class="flex gap-4">
+            @for (faq of faqs; track faq._id; let index = $index) {
+              <button class="w-3 h-3 p-1 rounded-sm bg-epc-r0 hover:bg-epc-r2" [class.clicked]="index == currentFaq()" (click)="moveToFaq(index)">
+              </button>
+            }
+          </div>
+        </div>
+
       </div>
     }
+
     <div class="relative flex flex-col items-center justify-center">
-      <h3 class="absolute top-0 px-8 py-2 rounded-md bg-epc-r1 -right-12 text-epc-w0">Preguntas Frecuentes</h3>
+      <h3 class="absolute top-0 px-8 py-2 transition-all duration-700 rounded-md bg-epc-r1 -right-12 text-epc-w0 group-hover:right-8">Preguntas Frecuentes</h3>
       <img src="/assets/images/epc-logo-off.svg" alt="">
     </div>
+
   </div>
 </section>
