--- a/src/app/modules/home/components/servicios-grid/servicios-grid.component.scss
+++ b/src/app/modules/home/components/servicios-grid/servicios-grid.component.scss
@@ -1,8 +1,8 @@
 .card {
-  @apply relative flex flex-col justify-end gap-1 p-8 rounded-lg min-h-40 bg-epc-w0 hover:bg-epc-d0 hover:text-epc-w0
+  @apply relative flex flex-col justify-end gap-1 p-8 rounded-lg min-h-40 bg-epc-w0 hover:bg-epc-d0 hover:text-epc-w0 drop-shadow-sm duration-300 hover:drop-shadow-none
 }
 
 
 .icon {
-  @apply absolute flex items-center text-epc-d2 justify-center w-12 h-12 text-2xl rounded-md top-4 right-4 bg-epc-o0 group-hover:bg-epc-r1 group-hover:text-epc-w0 group-hover:-top-2 transition-all duration-500
+  @apply absolute flex items-center text-epc-d2 justify-center w-12 h-12 text-2xl rounded-md top-4 right-4 bg-slate-100 group-hover:bg-epc-r1 group-hover:text-epc-w0 group-hover:-top-2 transition-all duration-500 delay-200
 }
