--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,25 +1,26 @@
-<footer class="mt-24 bg-epc-d0 text-epc-w0">
+<footer class="pt-32 mt-24 bg-epc-d0 text-epc-w0">
   @if (info.length > 0) {
-  <section class="container grid items-center grid-cols-6 mx-auto min-h-80">
+  <section class="container grid items-start grid-cols-6 mx-auto min-h-64 justify-items-center">
     <!-- COL 1 -->
     <div class="relative col-span-2">
       <div class="absolute left-0 flex items-center gap-2 -top-14">
         <h3 class="font-bold uppercase"><span class="text-epc-r1">El Paisa</span> Cargo</h3>
         <img src="/assets/images/favicon.svg" alt="El Paisa Logo" class="scale-x-[-1] w-12 pb-4">
       </div>
-      <h6 class="w-2/3 font-light">Taxes, ITIN, Placas, Aseguranzas, Money Orders, Envío de Carros y Cajas, Envío de dinero, Pasajes</h6>
+      <h6 class="w-2/3 text-xs font-light leading-6">Taxes, ITIN, Placas, Aseguranzas, Money Orders, Envío de Carros y Cajas, Envío de dinero, Pasajes</h6>
     </div>
 
     <!-- COL 2 -->
-    <ul class="relative flex flex-col gap-4">
+    <ul class="relative flex flex-col gap-2 *:transition-all *:duration-200">
       @for (page of pages; track page._id; let index = $index){
-        <li class="hoverable" (mouseover)="hoveredItem = index">{{page.title}} {{index}}</li>
+        <li class="hover:text-epc-r1 hover:-translate-x-2 *:flex *:gap-2 group">
+          <a href="" class="text-xs"><i class="iconoir-nav-arrow-right text-epc-w1 group-hover:text-epc-r1"></i>{{page.title}}</a>
+        </li>
       }
-      <span class="asterisk text-epc-r1" [style.top.px]="hoveredItem * 20">AQUIIII</span>
     </ul>
 
     <!-- COL 3 -->
-    <div class="col-span-3 list-none *:flex *:gap-2">
+    <div class="col-span-3 list-none *:flex *:gap-2 *:text-xs flex flex-col gap-4">
       <li><i class="iconoir-phone text-epc-r1"></i>{{info[0].address}}</li>
       <li><i class="iconoir-map-pin text-epc-r1"></i>{{info[0].phone}}</li>
     </div>
