chore: add social icons on side

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,18 +1,21 @@
-<header class="container flex items-end justify-between mx-auto min-h-16">
-  <!-- LOGO -->
-  <section class="relative">
-    <app-logo />
-  </section>
+<header class="absolute top-0 left-0 z-10 w-full">
+  <nav class="container flex items-end justify-between mx-auto min-h-16">
 
-  <!-- MENU -->
-  <section class="flex items-center gap-8">
-    <ul class="flex gap-8">
-      @for (page of pages(); track page._id) {
-      <li class="text-xs font-bold uppercase">{{page.title}}</li>
-      }
-    </ul>
-    <button>
-      <i class="iconoir-menu"></i>
-    </button>
-  </section>
+    <!-- LOGO -->
+    <section class="relative">
+      <app-logo />
+    </section>
+
+    <!-- MENU -->
+    <section class="flex items-center gap-8">
+      <ul class="flex gap-8">
+        @for (page of pages(); track page._id) {
+          <li class="text-xs font-bold uppercase">{{page.title}}</li>
+        }
+      </ul>
+      <button>
+        <i class="iconoir-menu"></i>
+      </button>
+    </section>
+  </nav>
 </header>
