--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div class="flex flex-col justify-between h-full min-h-screen bg-slate-100">
+<div class="flex flex-col justify-between h-full min-h-screen overflow-auto bg-slate-100">
 
   <app-navbar />
   <main class="mb-auto">
+    <app-sidebar />
+    <app-social-media />
     <router-outlet class="hidden" />
   </main>
   <app-footer />
