--- a/src/app/modules/home/components/faq/faq.component.html
+++ b/src/app/modules/home/components/faq/faq.component.html
@@ -17,7 +17,7 @@
           <h3 class="w-24 p-2 text-center rounded-md text-epc-r2">{{currentFaq() + 1}} <span class="text-epc-r0">/ {{faqs.length}}</span></h3>
           <div class="flex gap-4">
             @for (faq of faqs; track faq._id; let index = $index) {
-              <button class="w-3 h-3 p-1 rounded-sm bg-epc-r0 hover:bg-epc-r2" [class.clicked]="index == currentFaq()" (click)="moveToFaq(index)">
+              <button class="w-3 h-3 p-1 rounded-sm bg-slate-100 hover:bg-slate-300" [class.clicked]="index == currentFaq()" (click)="moveToFaq(index)">
               </button>
             }
           </div>
