--- a/src/app/modules/home/components/slider/slider.component.html
+++ b/src/app/modules/home/components/slider/slider.component.html
@@ -1,22 +1,29 @@
 @if (sliderData.length > 0) {
-<div class="grid items-end grid-cols-6 gap-8 min-h-96">
-  <!-- RIGHT COL -->
-  <div class="flex flex-col col-span-2 gap-4">
-    <h1>{{sliderData[1].title}}</h1>
-    <p class="max-w-96">{{sliderData[1].description}}</p>
+<div class="grid items-center h-full grid-cols-6 gap-8 content-evenly">
+  <!-- LEFT COL -->
+  <div class="flex flex-col justify-end h-full col-span-2 gap-4">
+    <h1>{{sliderData[currentSlide].title}}</h1>
+    <p class="max-w-96">{{sliderData[currentSlide].description}}</p>
     <button class="flex items-center gap-2 px-8 py-4 mr-auto rounded-lg bg-epc-w0">
       <i class="iconoir-phone"></i>
       Contactanos
     </button>
   </div>
 
-  <!-- LEFT COL -->
-  <div class="relative col-span-4">
+  <!-- RIGHT COL -->
+  <div class="col-span-4 overflow-hidden">
     <img
-      [src]="imageUrl(sliderData[1].image.asset._ref)+'?blur=500&q=10&fm=webp'"
+      [src]="imageUrl(sliderData[currentSlide].image.asset._ref)+'?blur=500&q=10&fm=webp'"
+      [@slideIn]
       alt="hero"
       class="rounded-lg">
-    <i class="absolute p-4 rounded-md -bottom-3 -left-3 iconoir-arrow-up-right bg-epc-r1 text-epc-w0"></i>
+    <!-- <i class="absolute p-4 rounded-md -bottom-3 -left-3 iconoir-arrow-up-right bg-epc-r1 text-epc-w0"></i> -->
+    <div class="z-10 flex justify-end gap-4 pt-4">
+      @for (slider of sliderData; track slider._id; let index = $index) {
+        <button class="w-3 h-3 p-1 rounded-sm bg-epc-r0 hover:bg-epc-r2" (click)="nextSlide(index)">
+        </button>
+      }
+    </div>
   </div>
 </div>
 }
