--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,15 +1,18 @@
-<section class="pt-2 mb-24 min-h-96">
-  <div class="container mx-auto">
+<section class="flex flex-col justify-between pt-2 mb-24 h-svh">
+
+  <div class="container items-center justify-center flex-1 mx-auto">
     <app-slider [sliderData]="sliderData" />
   </div>
+
+  <div #scrollingSection class="flex items-center w-full gap-8 overflow-hidden bg-epc-r1 min-h-32 text-nowrap text-epc-r2">
+    @for (service of services; track service._id){
+    <a class="cursor-pointer hover:text-epc-w0">{{service.parentService}}</a>
+    <span>/</span>
+    }
+  </div>
+
 </section>
 
-<section #scrollingSection class="flex items-center w-full gap-8 overflow-hidden bg-epc-r0 min-h-32 text-nowrap">
-  @for (service of services; track service._id){
-  <p class="text-epc-r2">{{service.parentService}}</p>
-  <span class="text-epc-r2">/</span>
-  }
-</section>
 
 <app-servicios-grid [services]="services" />
 <app-faq [faqs]="faqs" [services]="services"/>
