--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,8 @@
-<p>sidebar works!</p>
+@if (showSidebar()) {
+  <aside class="sticky top-0 right-0 z-20 flex items-end justify-end bg-opacity-80 bg-slate-200 w-svw h-svh">
+    <div class="relative flex items-center h-screen bg-red-500 max-w-96">
+      <button (click)="handleShowSidebar" class="absolute top-4 right-4">x</button>
+      <h1>Sidebar HERE</h1>
+    </div>
+  </aside>
+}
