chore: add contact modal

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -17,3 +17,4 @@
 <app-servicios-grid [services]="services" />
 <app-faq [faqs]="faqs" [services]="services"/>
 <app-marcas [brands]="brands" />
+<app-contact-modal />
