--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -21,8 +21,8 @@
 
     <!-- COL 3 -->
     <div class="col-span-3 list-none *:flex *:gap-2 *:text-xs flex flex-col gap-4">
-      <li><i class="iconoir-phone text-epc-r1"></i>{{info[0].address}}</li>
-      <li><i class="iconoir-map-pin text-epc-r1"></i>{{info[0].phone}}</li>
+      <li><i class="iconoir-phone text-epc-r1"></i>{{info[0].phone}}</li>
+      <li><i class="iconoir-map-pin text-epc-r1"></i>{{info[0].address}}</li>
     </div>
   </section>
   }
