--- a/src/app/modules/home/components/slider/slider.component.html
+++ b/src/app/modules/home/components/slider/slider.component.html
@@ -4,7 +4,7 @@
   <div class="flex flex-col justify-end h-full col-span-2 gap-4">
     <h1>{{sliderData[currentSlide].title}}</h1>
     <p class="max-w-96">{{sliderData[currentSlide].description}}</p>
-    <button class="flex items-center gap-2 px-8 py-4 mr-auto rounded-lg bg-epc-w0">
+    <button class="flex items-center gap-2 px-8 py-4 mr-auto rounded-lg bg-epc-w0" (click)="onOpenContactModal()">
       <i class="iconoir-phone"></i>
       Contactanos
     </button>
