--- a/src/app/shared/components/social-media/social-media.component.html
+++ b/src/app/shared/components/social-media/social-media.component.html
@@ -1,3 +1,10 @@
-<p class="sticky left-0 top-8">
+<!-- <p class="sticky left-0 top-8">
   <button class="p-2 bg-blue-800">FB</button>
-</p>
+</p> -->
+
+<div class="fixed right-0 flex items-center h-screen p-2">
+  <div class="flex flex-col *:bg-slate-300 gap-2 *:rounded-sm *:opacity-40">
+    <button class="p-2 hover:bg-blue-700 hover:opacity-100">FB</button>
+    <button class="p-2 hover:bg-green-400 hover:opacity-100">WA</button>
+  </div>
+</div>
