--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -10,7 +10,9 @@
     <section class="flex items-center gap-8">
       <ul class="flex gap-8">
         @for (page of pages(); track page._id) {
-          <li class="text-xs font-bold uppercase">{{page.title}}</li>
+          <li class="text-xs font-bold uppercase">
+            <a href="#{{page.slug.current}}">{{page.title}}</a>
+          </li>
         }
       </ul>
       <button (click)="onOpenSidebar()">
