--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="pt-32 mt-24 bg-epc-d0 text-epc-w0">
+<footer class="relative pt-32 mt-24 bg-epc-d0 text-epc-w0">
   @if (info.length > 0) {
   <section class="container grid items-start grid-cols-6 mx-auto min-h-64 justify-items-center">
     <!-- COL 1 -->
@@ -24,6 +24,9 @@
       <li><i class="iconoir-phone text-epc-r1"></i>{{info[0].phone}}</li>
       <li><i class="iconoir-map-pin text-epc-r1"></i>{{info[0].address}}</li>
     </div>
+
+    <!-- GO TO TOP -->
   </section>
-  }
+}
+  <button class="absolute right-4 top-[50%] p-2 hover:bg-epc-r1 hover:opacity-100 bg-white opacity-20 rounded-sm text-black" (click)="goTop()">TOP</button>
 </footer>
