--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,6 @@
-<footer class="relative pt-32 mt-24 bg-epc-d0 text-epc-w0">
+<div class="mt-24 spikes"></div>
+
+<footer class="relative pt-32 bg-epc-d0 text-epc-w0">
   @if (info.length > 0) {
   <section class="container grid items-start grid-cols-6 mx-auto min-h-52 justify-items-center">
     <!-- COL 1 -->
@@ -26,6 +28,8 @@
     </div>
 
     <!-- GO TO TOP -->
+    <button class="absolute right-4 top-[50%] p-2 hover:bg-epc-r1 hover:opacity-100 bg-white opacity-20 rounded-sm text-black" (click)="goTop()">TOP</button>
+
   </section>
   }
 
