--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,21 @@ p {
   font-size: 1rem;
   line-height: 2;
 }
+
+.spikes {
+  position: relative;
+}
+
+.spikes::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 100%;
+  z-index: 10;
+  height: 10px;
+  background-size: 10px 10px;
+  background-image: linear-gradient(135deg, #F5F5F4 25%, transparent 25%),
+                    linear-gradient(225deg, #F5F5F4 25%, transparent 25%);
+  background-position: 0 0;
+}
