--- a/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
+++ b/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
@@ -1,24 +1,41 @@
 <section class="container grid grid-cols-6 mx-auto my-24">
 
   <!-- INTRO -->
-  <h2 class="col-span-4">¡Estamos aquí para brindarte todo el apoyo<br/> que necesites en cada paso del camino!</h2>
+  <h2 class="col-span-4">¡Estamos aquí para brindarte todo el apoyo<br /> que necesites en cada paso del camino!</h2>
   <div class="col-span-2">
-    <h6>Desde resolver tus consultas más simples hasta abordar desafíos más complejos, nuestro compromiso es estar a tu lado en cada paso del proceso.</h6>
+    <h6>Desde resolver tus consultas más simples hasta abordar desafíos más complejos, nuestro compromiso es estar a tu
+      lado en cada paso del proceso.</h6>
   </div>
 </section>
 
 
-  <!-- SERVICES -->
-  <section class="container grid grid-cols-3 gap-8 mx-auto">
-    @for (service of services; track service._id){
-      <div class="card group">
-        <h3>{{service.parentService}}</h3>
-        <!-- <p>{{service.subservices}}</p> -->
-        <p class="text-xs">{{service.description}}</p>
-        <div class="icon">
-          <i class="iconoir-{{service.icon}}"></i>
-        </div>
-      </div>
+<!-- SERVICES -->
+<section class="container grid grid-cols-3 gap-8 mx-auto" id="servicios">
+  @for (service of services; track service._id){
+  <button class="card group" (click)="onColumnClick(service._id)" [class.span-3]="selectedColumn === service._id" [id]="service._id">
+    <h3>{{service.parentService}}</h3>
+    <!-- <p>{{service.subservices}}</p> -->
+    <p class="text-xs">{{service.description}}</p>
+    <div class="icon">
+      <i class="iconoir-{{service.icon}}"></i>
+    </div>
+  </button>
+  }
+</section>
 
-    }
-  </section>
+<!-- MODAL -->
+<!-- @if (selectedColumn === service._id) {
+  <div class="col-span-3 pl-8">
+    @for (subservice of service.subservices; track $index) {
+    <div class="flex items-center justify-start gap-4">
+      <span class="w-3 h-3 pt-4 rounded-sm bg-epc-r0 hover:bg-epc-r2">
+      </span>
+      <p>{{subservice.service}}</p>
+    </div>
+    } -->
+
+  @if (selectedColumn !== '') {
+    <div class="absolute top-0 right-0 flex items-center justify-center bg-epc-d0">
+      Hello
+    </div>
+  }
