--- a/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
+++ b/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
@@ -12,9 +12,8 @@
 <!-- SERVICES -->
 <section class="container grid grid-cols-3 gap-8 mx-auto" id="servicios">
   @for (service of services; track service._id){
-  <button class="card group" (click)="onColumnClick(service._id)" [class.span-3]="selectedColumn === service._id" [id]="service._id">
-    <h3>{{service.parentService}}</h3>
-    <!-- <p>{{service.subservices}}</p> -->
+  <button class="card group" (click)="onColumnClick(service)">
+    <h3 class="text-left">{{service.parentService}}</h3>
     <p class="text-xs">{{service.description}}</p>
     <div class="icon">
       <i class="iconoir-{{service.icon}}"></i>
@@ -24,18 +23,25 @@
 </section>
 
 <!-- MODAL -->
-<!-- @if (selectedColumn === service._id) {
-  <div class="col-span-3 pl-8">
-    @for (subservice of service.subservices; track $index) {
-    <div class="flex items-center justify-start gap-4">
-      <span class="w-3 h-3 pt-4 rounded-sm bg-epc-r0 hover:bg-epc-r2">
-      </span>
-      <p>{{subservice.service}}</p>
-    </div>
-    } -->
 
-  @if (selectedColumn !== '') {
-    <div class="absolute top-0 right-0 flex items-center justify-center bg-epc-d0">
-      Hello
+  @if (selectedService) {
+    <div class="fixed top-0 right-0 z-20 flex items-center justify-center w-full h-screen bg-epc-d1 backdrop-blur-md">
+      <div class="relative w-2/3 max-w-2xl p-8 rounded-md bg-epc-w0 max-h-2/3">
+        <button class="absolute flex items-center justify-center rounded-md size-8 -right-2 -top-2 bg-epc-d0 text-epc-w0 hover:text-epc-r1 hover:bg-epc-o0"
+        (click)="closeContactModal()">x</button>
+        <div class="flex items-center gap-2 p-4 mb-4 rounded-md bg-epc-r1 text-epc-w0">
+          <i class="iconoir-{{selectedService.icon}} text-4xl text-epc-d0"></i>
+          <h2>{{selectedService.parentService}}</h2>
+        </div>
+        <div class="flex flex-col justify-start gap-1 pl-4">
+          @for (subservice of selectedService.subservices; track $index) {
+            <div class="flex items-center justify-start gap-4">
+              <span class="w-3 h-3 pt-4 rounded-sm bg-epc-r0 hover:bg-epc-r2">
+              </span>
+              <p>{{subservice.service}}</p>
+            </div>
+            }
+        </div>
+      </div>
     </div>
   }
