--- a/src/app/modules/home/components/contact-modal/contact-modal.component.html
+++ b/src/app/modules/home/components/contact-modal/contact-modal.component.html
@@ -1,5 +1,5 @@
-<section *ngIf="openContactModal">
-  <div class="relative grid w-1/2 grid-cols-3 overflow-hidden rounded-lg h-1/3 bg-epc-w0">
+<section *ngIf="openContactModal" class="backdrop-blur-md bg-epc-d1">
+  <div class="relative grid w-1/2 grid-cols-3 rounded-lg h-1/3 bg-epc-w0">
     <div class="flex flex-col bg-slate-600 left-col">
     </div>
     <div class="flex flex-col col-span-2 p-8">
@@ -39,7 +39,7 @@
       }
     </div>
 
-    <button class="absolute flex items-center justify-center rounded-md size-8 right-2 top-2 bg-epc-d0 text-epc-w0"
+    <button class="absolute flex items-center justify-center rounded-md size-8 -right-2 -top-2 bg-epc-d0 text-epc-w0 hover:bg-epc-o0 hover:text-epc-r1"
       (click)="closeContactModal()">x</button>
   </div>
 </section>
