--- a/src/app/modules/home/components/contact-modal/contact-modal.component.scss
+++ b/src/app/modules/home/components/contact-modal/contact-modal.component.scss
@@ -4,7 +4,6 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
   z-index: 1000;
   display: flex;
   justify-content: center;
@@ -15,4 +14,6 @@ section {
   background: url('https://images.unsplash.com/photo-1566576721346-d4a3b4eaeb55?q=80&w=3465&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
   background-size: cover;
   background-position: center;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
