--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
             <ul class="flex flex-col gap-2 px-4 py-2 my-2 text-xs rounded-sm bg-epc-r2 hover:text-epc-w0">
               @for(sub of service.subservices; track $index){
                 <li>
-                  <p class="text-xs font-thin text-wrap text-epc-w0">{{sub.service}}</p>
+                  <p class="text-xs font-thin text-left text-wrap text-epc-w0">{{sub.service}}</p>
                 </li>
               }
             </ul>
