--- a/src/app/shared/components/social-media/social-media.component.html
+++ b/src/app/shared/components/social-media/social-media.component.html
@@ -1,6 +1,7 @@
 <div class="fixed right-0 flex items-center h-screen p-2">
   <div class="flex flex-col *:bg-slate-300 gap-2 *:rounded-sm *:opacity-40">
-    <button class="p-2 hover:bg-blue-700 hover:opacity-100">FB</button>
-    <button class="p-2 hover:bg-green-400 hover:opacity-100">WA</button>
+    @for (social of info[0].socialMedia; track $index) {
+      <a href="https://wa.me/" class="p-2 hover:bg-green-400 hover:opacity-100">WA</a>
+    }
   </div>
 </div>
