--- a/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
+++ b/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
@@ -1,4 +1,3 @@
-
 <section class="container grid grid-cols-6 mx-auto my-24">
   <!-- INTRO -->
   <h2 class="col-span-4">
@@ -14,9 +13,21 @@
 </section>
 
 <!-- SERVICES -->
-<section class="container grid grid-cols-3 gap-8 mx-auto" id="servicios">
+<!-- [src]="imageUrl(sliderData[currentSlide].image.asset._ref)+'?blur=500&q=10&fm=webp'" -->
+<!-- [style.background-image]="'url(' + (service.image.asset._ref) + ')'"
+ -->
+<section
+  class="container grid grid-cols-3 gap-8 mx-auto"
+  id="servicios"
+  *ngIf="services[0]?.image"
+>
   @for (service of services; track $index){
-  <button class="card group" (click)="onColumnClick($index)">
+    <button
+    *ngIf="service?.image?.asset"
+    class="bg-cover card group"
+    (click)="onColumnClick($index)"
+    [style.background-image]="'url(' + imageUrl(service.image.asset._ref) + ')'"
+  >
     <h3 class="text-left">{{ service.parentService }}</h3>
     <p class="text-xs">{{ service.description }}</p>
     <div class="icon">
@@ -58,15 +69,17 @@
 
   <!-- NEXT SERVICE -->
   <button
-  (click)="onNextService()"
-  class="absolute flex items-center w-auto h-8 p-4 rounded-sm right-8 bg-epc-w2 hover:bg-epc-r1 text-epc-w0">
+    (click)="onNextService()"
+    class="absolute flex items-center w-auto h-8 p-4 rounded-sm right-8 bg-epc-w2 hover:bg-epc-r1 text-epc-w0"
+  >
     <i class="iconoir-arrow-up-right"></i>
   </button>
 
   <!-- PREV SERVICE -->
   <button
-  (click)="onPrevService()"
-  class="absolute flex items-center w-auto h-8 p-4 rounded-sm left-8 bg-epc-w2 hover:bg-epc-r1 text-epc-w0">
+    (click)="onPrevService()"
+    class="absolute flex items-center w-auto h-8 p-4 rounded-sm left-8 bg-epc-w2 hover:bg-epc-r1 text-epc-w0"
+  >
     <i class="iconoir-arrow-down-left"></i>
   </button>
 </div>
