--- a/src/app/shared/components/social-media/social-media.component.html
+++ b/src/app/shared/components/social-media/social-media.component.html
@@ -1,7 +1,7 @@
 <div class="fixed right-0 flex items-center h-screen p-2">
   <div class="flex flex-col *:bg-slate-300 gap-2 *:rounded-sm *:opacity-40">
-    @for (social of info[0].socialMedia; track $index) {
-      <a href="https://wa.me/" class="p-2 hover:bg-green-400 hover:opacity-100">WA</a>
-    }
+    <!-- @for (social of info[0].socialMedia; track $index) {
+      <a target="_blank" [href]="social.link" class="p-2 text-center hover:bg-epc-d1 hover:opacity-100">{{social.icon}}</a>
+    } -->
   </div>
 </div>
