--- a/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
+++ b/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
@@ -12,10 +12,6 @@
   </div>
 </section>
 
-<!-- SERVICES -->
-<!-- [src]="imageUrl(sliderData[currentSlide].image.asset._ref)+'?blur=500&q=10&fm=webp'" -->
-<!-- [style.background-image]="'url(' + (service.image.asset._ref) + ')'"
- -->
 <section
   class="container grid grid-cols-3 gap-8 mx-auto"
   id="servicios"
@@ -24,15 +20,18 @@
   @for (service of services; track $index){
     <button
     *ngIf="service?.image?.asset"
-    class="bg-cover card group"
+    class="relative bg-center bg-cover card group"
     (click)="onColumnClick($index)"
-    [style.background-image]="'url(' + imageUrl(service.image.asset._ref) + ')'"
+    [style.background-image]="currentIndex === $index ? 'url(' + imageUrl(service.image.asset._ref)+'?w=600&q=70&b=20' + ')' : 'none'"
+    (mouseenter)="setCurrentIndex($index)"
+    (mouseleave)="setCurrentIndex()"
   >
     <h3 class="text-left">{{ service.parentService }}</h3>
     <p class="text-xs">{{ service.description }}</p>
     <div class="icon">
       <i class="iconoir-{{ service.icon }}"></i>
     </div>
+    <span class="absolute top-0 left-0 w-full h-full transition-all duration-500 bg-transparent rounded-lg group-hover:bg-gradient-to-t from-epc-d0 to-epc-d1 -z-10"></span>
   </button>
   }
 </section>
