--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -28,7 +28,7 @@
     </div>
 
     <!-- GO TO TOP -->
-    <button class="absolute right-4 top-[50%] p-2 hover:bg-epc-r1 hover:opacity-100 bg-white opacity-20 rounded-sm text-black" (click)="goTop()">TOP</button>
+    <button class="text-xs absolute right-4 top-[50%] p-2 hover:bg-epc-r1 hover:opacity-100 bg-white opacity-20 rounded-sm text-black" (click)="goTop()">TOP</button>
 
   </section>
   }
