--- a/src/app/shared/components/logo/logo.component.html
+++ b/src/app/shared/components/logo/logo.component.html
@@ -1,4 +1,4 @@
 <div class="logo">
   <img src="/assets/images/epc-logo-front.svg" alt="" class="w-20 h-auto">
-  <h2><span>El</span>Paisa<br/>Cargo</h2>
+  <h2 class=""><span>El</span>Paisa<br/>Cargo</h2>
 </div>
