--- a/src/app/shared/components/social-media/social-media.component.html
+++ b/src/app/shared/components/social-media/social-media.component.html
@@ -1,4 +1,4 @@
-<div class="fixed right-0 flex items-center h-screen p-2">
+<div class="fixed right-0 z-20 items-center hidden h-screen p-2 lg:flex">
   <div class="flex flex-col *:bg-slate-300 gap-2 *:rounded-sm *:opacity-40">
     @if(info.length > 0) {
       @for (social of info[0].socialMedia; track $index) {
