--- a/src/app/modules/home/components/contact-modal/contact-modal.component.html
+++ b/src/app/modules/home/components/contact-modal/contact-modal.component.html
@@ -1,8 +1,9 @@
 <section *ngIf="openContactModal" class="backdrop-blur-md bg-epc-d1">
-  <div class="relative grid w-1/2 grid-cols-3 rounded-lg h-1/3 bg-epc-w0">
-    <div class="flex flex-col bg-slate-600 left-col">
+  <div class="relative grid w-4/5 grid-cols-3 rounded-lg lg:w-1/2 xl:h-2/4 xl:w-1/2 bg-epc-w0">
+    <div class="flex flex-col h-32 col-span-3 sm:h-48 md:h-full bg-slate-600 left-col md:col-span-1">
     </div>
-    <div class="flex flex-col col-span-2 p-8">
+
+    <div class="flex flex-col justify-center col-span-3 p-8 md:col-span-2">
       <h3 class="pb-2">Contactanos!</h3>
       @if (info.length > 0) {
 
@@ -21,7 +22,7 @@
         <p>{{info[0].address}}</p>
       </div>
 
-      <div class="flex items-start gap-2">
+      <div class="items-start hidden gap-2 sm:flex">
         <i class="pt-2 iconoir-clock"></i>
         <div>
           <div class="flex gap-2">
