--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -4,16 +4,16 @@
   @if (info.length > 0) {
   <section class="container grid items-start grid-cols-6 mx-auto min-h-52 justify-items-center">
     <!-- COL 1 -->
-    <div class="relative col-span-2">
-      <div class="absolute left-0 flex items-center gap-2 -top-14">
+    <div class="relative col-span-6 lg:col-span-2">
+      <div class="absolute left-0 flex items-center justify-center w-full gap-2 mx-auto -top-14 lg:justify-start">
         <h3 class="font-bold uppercase"><span class="text-epc-r1">El Paisa</span> Cargo</h3>
         <img src="/assets/images/favicon.svg" alt="El Paisa Logo" class="scale-x-[-1] w-12 pb-4">
       </div>
-      <h6 class="w-2/3 text-xs font-light leading-6">Taxes, ITIN, Placas, Aseguranzas, Money Orders, Envío de Carros y Cajas, Envío de dinero, Pasajes</h6>
+      <h6 class="w-3/5 mx-auto text-xs font-light leading-6 text-center lg:mx-0 lg:w-2/3 lg:text-left">Taxes, ITIN, Placas, Aseguranzas, Money Orders, Envío de Carros y Cajas, Envío de dinero, Pasajes</h6>
     </div>
 
     <!-- COL 2 -->
-    <ul class="relative flex flex-col gap-2 *:transition-all *:duration-200">
+    <ul class="relative lg:flex flex-col gap-2 *:transition-all *:duration-200 hidden">
       @for (page of pages; track page._id; let index = $index){
         <li class="hover:text-epc-r1 hover:-translate-x-2 *:flex *:gap-2 group">
           <button (click)="navigateTo(page.slug.current)" class="text-xs"><i class="iconoir-nav-arrow-right text-epc-w1 group-hover:text-epc-r1"></i>{{page.title}}</button>
@@ -22,7 +22,7 @@
     </ul>
 
     <!-- COL 3 -->
-    <div class="col-span-3 list-none *:flex *:gap-2 *:text-xs flex flex-col gap-4">
+    <div class="lg:col-span-3 list-none *:flex *:gap-2 *:text-xs flex flex-col gap-4 col-span-6">
       <li><i class="iconoir-phone text-epc-r1"></i>{{info[0].phone}}</li>
       <li><i class="iconoir-map-pin text-epc-r1"></i>{{info[0].address}}</li>
     </div>
