--- a/src/app/shared/components/logo/logo.component.scss
+++ b/src/app/shared/components/logo/logo.component.scss
@@ -10,12 +10,38 @@
     font-size: 1.5rem;
     text-transform: uppercase;
     line-height: 1.2;
+    visibility: hidden;
 
     span {
       font-size: 1rem;
       text-decoration: underline;
       padding-right: 0.25rem;
       text-underline-offset: 0.25rem;
+    }
+  }
+}
+
+@media (min-width: 1024px) {
+  .logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: -3rem;
+
+    h2 {
+      font-weight: 700;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      line-height: 1.2;
+      visibility: visible;
+
+      span {
+        font-size: 1rem;
+        text-decoration: underline;
+        padding-right: 0.25rem;
+        text-underline-offset: 0.25rem;
+      }
     }
   }
 }
