--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,18 +1,18 @@
 @if (openSidebar) {
-<aside class="fixed top-0 right-0 z-20 flex items-end justify-end bg-opacity-80 bg-slate-200 size-full">
+<aside class="fixed top-0 right-0 z-40 flex items-end justify-end bg-opacity-80 bg-slate-200 size-full">
   <div class="flex items-center h-full p-4 rounded-lg">
 
     <!-- Close Modal -->
     <button (click)="onOpenSidebar()" class="absolute rounded-md top-8 right-8 size-8 bg-epc-d0 text-epc-w0">x</button>
 
     <!-- Modal Content -->
-    <div class="h-full p-4 rounded-lg bg-epc-r1 max-w-[32rem] content w-full" [@slideIn]>
+    <div class="h-full p-4 rounded-lg bg-epc-r1 max-w-4/5  lg:max-w-[32rem] content w-full overflow-auto" [@slideIn]>
       <ul class="flex flex-col gap-6 p-2 pt-16">
         @for(service of services; track service._id){
         <button class="font-semibold cursor-pointer text-epc-w0 hover:text-epc-d0" (click)="selectedServiceId = service._id">
           <li class="flex items-center gap-2">
             <i class="iconoir-{{service.icon}}"></i>
-            <p class="text-xs">{{service.parentService}}</p>
+            <p class="text-xs text-left">{{service.parentService}}</p>
           </li>
           @if(selectedServiceId === service._id){
             <ul class="flex flex-col gap-2 px-4 py-2 my-2 text-xs rounded-sm bg-epc-r2 hover:text-epc-w0">
