chore: fix service on hover

--- a/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
+++ b/src/app/modules/home/components/servicios-grid/servicios-grid.component.html
@@ -18,20 +18,27 @@
   *ngIf="services[0]?.image"
 >
   @for (service of services; track $index){
-    <button
+  <button
     *ngIf="service?.image?.asset"
     class="relative bg-center bg-cover card group"
     (click)="onColumnClick($index)"
-    [style.background-image]="currentIndex === $index ? 'url(' + imageUrl(service.image.asset._ref)+'?w=600&q=70&b=20' + ')' : 'none'"
     (mouseenter)="setCurrentIndex($index)"
     (mouseleave)="setCurrentIndex()"
   >
-    <h3 class="text-left">{{ service.parentService }}</h3>
-    <p class="text-xs text-left">{{ service.description }}</p>
-    <div class="icon">
+    <h3 class="z-20 text-left">{{ service.parentService }}</h3>
+    <p class="z-20 text-xs text-left">{{ service.description }}</p>
+    <div class="z-20 icon">
       <i class="iconoir-{{ service.icon }}"></i>
     </div>
-    <span class="absolute top-0 left-0 w-full h-full transition-all duration-500 bg-transparent rounded-lg group-hover:bg-gradient-to-t from-epc-d0 to-epc-d1 -z-10"></span>
+    <span
+      class="absolute top-0 left-0 z-10 w-full h-full transition-all duration-500 bg-transparent rounded-lg group-hover:bg-gradient-to-t from-epc-d0 to-epc-d1"
+    ></span>
+    <span
+      class="absolute top-0 left-0 z-0 w-full h-full transition-opacity duration-500 rounded-lg opacity-0 bg-img group-hover:opacity-100"
+      [style.background-image]="
+        'url(' + imageUrl(service.image.asset._ref) + '?w=600&q=70&b=20' + ')'
+      "
+    ></span>
   </button>
   }
 </section>
@@ -43,7 +50,9 @@
   class="fixed top-0 right-0 z-20 flex items-center justify-center w-full h-screen bg-epc-d1 backdrop-blur-md"
 >
   <!-- MAIN -->
-  <div class="relative w-2/3 max-w-2xl p-8 rounded-md bg-epc-w0 max-h-2/3">
+  <div
+    class="relative w-full max-w-2xl max-h-full p-8 m-4 rounded-md lg:w-2/3 bg-epc-w0 lg:max-h-2/3 lg:m-0"
+  >
     <button
       class="absolute flex items-center justify-center rounded-md size-8 -right-2 -top-2 bg-epc-d0 text-epc-w0 hover:text-epc-r1 hover:bg-epc-o0"
       (click)="closeContactModal()"
@@ -51,10 +60,10 @@
       x
     </button>
     <div
-      class="flex items-center gap-2 p-4 mb-4 rounded-md bg-epc-r1 text-epc-w0"
+      class="flex items-center gap-2 p-4 mb-4 overflow-auto rounded-md bg-epc-r1 text-epc-w0"
     >
       <i class="iconoir-{{ selectedService.icon }} text-4xl text-epc-d0"></i>
-      <h2>{{ selectedService.parentService }}</h2>
+      <h2 class="text-balance">{{ selectedService.parentService }}</h2>
     </div>
     <div class="flex flex-col justify-start gap-1 pl-4">
       @for (subservice of selectedService.subservices; track $index) {
